syntax = "proto3";

package api.client;

option go_package = "github.com/meshtrade/api/go/client";

enum ClientType  {
  UNDEFINED_COMPANY_ClientType = 0;
  Issuer_COMPANY_ClientType = 1;
  Investor_COMPANY_ClientType = 2;
  Managing_Company_ClientType = 3;
}